--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.1",
+    "firebase": "^8.6.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-service-worker": "^0.1.1",
+    "serve": "^11.3.2",
+    "web-push": "^3.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
